# Poisson2DSolver_ZZ

./: .gitignore  CMakeLists.txt
data/: example_input.json
include/pde2d/: Element.hpp  Mesh2D.hpp  Node.hpp  RectangularElement.hpp  TriangularElement.hpp  fem_2D.hpp  io.hpp  problem_syb.hpp  quadrature_boost.hpp  solver_newton.hpp
src/client/: main.cpp
src/pde2d/: Mesh2D.cpp  fem_2D.cpp  io.cpp  problem_syb.cpp  quadrature_boost.cpp  solver_newton.cpp
test/: test_basic.cpp
